crates/slate/tests/snapshots/printf_float_width.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: f64 = 0.0;
    let mut b: f64 = 0.0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: f64 = 3.14159;
    a = _v1;
    let _v2: f64 = -3.14159;
    b = _v2;
    let _v3: *mut i8 = b"%8.2f|%+8.2f|%08.2f|%-8.2f|%+.2f\n\0".as_ptr() as *mut i8;
    let _v4: f64 = a;
    let _v5: f64 = a;
    let _v6: f64 = b;
    let _v7: f64 = a;
    let _v8: f64 = b;
    let _v9: i32 = unsafe { printf(_v3 as *const i8, _v4, _v5, _v6, _v7, _v8) };
    let _v10: i32 = 0;
    __retval = _v10;
    let _v11: i32 = __retval;
    std::process::exit(_v11 as i32);
}
