crates/slate/tests/snapshots/printf_hex_octal.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut value: u32 = 0;
    let mut mask: u32 = 0;
    let mut wide: u64 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: u32 = 48879;
    value = _v1;
    let _v2: u32 = 255;
    mask = _v2;
    let _v3: u64 = 511;
    wide = _v3;
    let _v4: *mut i8 = b"%x %X %o\n\0".as_ptr() as *mut i8;
    let _v5: u32 = value;
    let _v6: u32 = mask;
    let _v7: u64 = wide;
    let _v8: i32 = unsafe { printf(_v4 as *const i8, _v5, _v6, _v7) };
    let _v9: *mut i8 = b"%08x|%-4X|%5o\n\0".as_ptr() as *mut i8;
    let _v10: u32 = mask;
    let _v11: u32 = mask;
    let _v12: u32 = mask;
    let _v13: i32 = unsafe { printf(_v9 as *const i8, _v10, _v11, _v12) };
    let _v14: i32 = 0;
    __retval = _v14;
    let _v15: i32 = __retval;
    std::process::exit(_v15 as i32);
}
