crates/slate/tests/snapshots/printf_integer_widths.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut c: i32 = 0;
    let mut u: u32 = 0;
    let mut l: i64 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 42;
    a = _v1;
    let _v2: i32 = 7;
    b = _v2;
    let _v3: i32 = -42;
    c = _v3;
    let _v4: u32 = 9;
    u = _v4;
    let _v5: i64 = 123;
    l = _v5;
    let _v6: *mut i8 = b"%05d|%-4d|%+d|%5u|%+06ld\n\0".as_ptr() as *mut i8;
    let _v7: i32 = a;
    let _v8: i32 = b;
    let _v9: i32 = c;
    let _v10: u32 = u;
    let _v11: i64 = l;
    let _v12: i32 = unsafe { printf(_v6 as *const i8, _v7, _v8, _v9, _v10, _v11) };
    let _v13: i32 = 0;
    __retval = _v13;
    let _v14: i32 = __retval;
    std::process::exit(_v14 as i32);
}
