crates/slate/tests/snapshots/printf_narrow_length_modifiers_rejected.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: i32 = 0;
    let mut prec: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 300;
    x = _v1;
    let _v2: i32 = 2;
    prec = _v2;
    let _v3: *mut i8 = b"%.*hhd\n\0".as_ptr() as *mut i8;
    let _v4: i32 = prec;
    let _v5: i32 = x;
    let _v6: i32 = unsafe { printf(_v3 as *const i8, _v4, _v5) };
    let _v7: *mut i8 = b"%.*hd\n\0".as_ptr() as *mut i8;
    let _v8: i32 = prec;
    let _v9: i32 = x;
    let _v10: i32 = unsafe { printf(_v7 as *const i8, _v8, _v9) };
    let _v11: i32 = 0;
    __retval = _v11;
    let _v12: i32 = __retval;
    std::process::exit(_v12 as i32);
}
