crates/slate/tests/snapshots/printf_scientific.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut pos: f64 = 0.0;
    let mut neg: f64 = 0.0;
    let mut zero: f64 = 0.0;
    let mut big: f64 = 0.0;
    let mut small: f64 = 0.0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: f64 = 1234.5678;
    pos = _v1;
    let _v2: f64 = -1234.5678;
    neg = _v2;
    let _v3: f64 = 0.0;
    zero = _v3;
    let _v4: f64 = 1000000000000000052504760255204420248704468581108159154915854115511802457988908195786371375080447864043704443832883878176942523235360430575644792184786706982848387200926575803737830233794788090059368953234970799945081119038967640880074652742780142494579258788820056842838115669472196386865459400540160.0;
    big = _v4;
    let _v5: f64 = 0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001;
    small = _v5;
    let _v6: *mut i8 = b"%e %.2e %10.2e %+e\n\0".as_ptr() as *mut i8;
    let _v7: f64 = pos;
    let _v8: f64 = pos;
    let _v9: f64 = pos;
    let _v10: f64 = pos;
    let _v11: i32 = unsafe { printf(_v6 as *const i8, _v7, _v8, _v9, _v10) };
    let _v12: *mut i8 = b"%E %.2E\n\0".as_ptr() as *mut i8;
    let _v13: f64 = pos;
    let _v14: f64 = pos;
    let _v15: i32 = unsafe { printf(_v12 as *const i8, _v13, _v14) };
    let _v16: *mut i8 = b"%-10.2e|\n\0".as_ptr() as *mut i8;
    let _v17: f64 = pos;
    let _v18: i32 = unsafe { printf(_v16 as *const i8, _v17) };
    let _v19: *mut i8 = b"%e %+e\n\0".as_ptr() as *mut i8;
    let _v20: f64 = neg;
    let _v21: f64 = neg;
    let _v22: i32 = unsafe { printf(_v19 as *const i8, _v20, _v21) };
    let _v23: *mut i8 = b"%.0e\n\0".as_ptr() as *mut i8;
    let _v24: f64 = pos;
    let _v25: i32 = unsafe { printf(_v23 as *const i8, _v24) };
    let _v26: *mut i8 = b"%e\n\0".as_ptr() as *mut i8;
    let _v27: f64 = zero;
    let _v28: i32 = unsafe { printf(_v26 as *const i8, _v27) };
    let _v29: *mut i8 = b"%e %E\n\0".as_ptr() as *mut i8;
    let _v30: f64 = big;
    let _v31: f64 = small;
    let _v32: i32 = unsafe { printf(_v29 as *const i8, _v30, _v31) };
    let _v33: i32 = 0;
    __retval = _v33;
    let _v34: i32 = __retval;
    std::process::exit(_v34 as i32);
}
