crates/slate/tests/snapshots/printf_scientific_rejected.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut x: f64 = 0.0;
    let mut prec: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: f64 = 1234.5678;
    x = _v1;
    let _v2: i32 = 2;
    prec = _v2;
    let _v3: *mut i8 = b"%015.2e\n\0".as_ptr() as *mut i8;
    let _v4: f64 = x;
    let _v5: i32 = unsafe { printf(_v3 as *const i8, _v4) };
    let _v6: *mut i8 = b"%.*e\n\0".as_ptr() as *mut i8;
    let _v7: i32 = prec;
    let _v8: f64 = x;
    let _v9: i32 = unsafe { printf(_v6 as *const i8, _v7, _v8) };
    let _v10: *mut i8 = b"% e\n\0".as_ptr() as *mut i8;
    let _v11: f64 = x;
    let _v12: i32 = unsafe { printf(_v10 as *const i8, _v11) };
    let _v13: *mut i8 = b"%#e\n\0".as_ptr() as *mut i8;
    let _v14: f64 = x;
    let _v15: i32 = unsafe { printf(_v13 as *const i8, _v14) };
    let _v16: i32 = 0;
    __retval = _v16;
    let _v17: i32 = __retval;
    std::process::exit(_v17 as i32);
}
