crates/slate/tests/snapshots/printf_string_char.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%s %c %c %d\n\0".as_ptr() as *mut i8;
    let _v2: *mut i8 = b"tag\0".as_ptr() as *mut i8;
    let _v3: i32 = 65;
    let _v4: i32 = 10;
    let _v5: i32 = 7;
    let _v6: i32 = unsafe { printf(_v1 as *const i8, _v2, _v3, _v4, _v5) };
    let _v7: *mut i8 = b"literal=%s\0".as_ptr() as *mut i8;
    let _v8: *mut i8 = b"tail\0".as_ptr() as *mut i8;
    let _v9: i32 = unsafe { printf(_v7 as *const i8, _v8) };
    let _v10: i32 = 0;
    __retval = _v10;
    let _v11: i32 = __retval;
    std::process::exit(_v11 as i32);
}
