crates/slate/tests/snapshots/printf_string_width_precision.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%5s|%-5s|%.1s|%6.1s\n\0".as_ptr() as *mut i8;
    let _v2: *mut i8 = b"hi\0".as_ptr() as *mut i8;
    let _v3: *mut i8 = b"hi\0".as_ptr() as *mut i8;
    let _v4: *mut i8 = b"hi\0".as_ptr() as *mut i8;
    let _v5: *mut i8 = b"hi\0".as_ptr() as *mut i8;
    let _v6: i32 = unsafe { printf(_v1 as *const i8, _v2, _v3, _v4, _v5) };
    let _v7: i32 = 0;
    __retval = _v7;
    let _v8: i32 = __retval;
    std::process::exit(_v8 as i32);
}
